fix element overflow

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 body{
     background-color: rgb(216, 175, 121);
-    max-width: 100vw;
+    width: 100vw;
 }
 
 /* gate container */
@@ -25,6 +25,7 @@ body{
     width: 100vw;
     height: 100vh;
     position: relative;
+    transition: all 1s linear 1s;
 }
 
 /* gate mechanism */
@@ -76,6 +77,7 @@ body{
     top: 10%;
     width: 100%;
     height: 80%;
+    overflow: hidden;
 }
 .left-wing, .right-wing{
     position: absolute;
@@ -100,11 +102,7 @@ body{
 }
 .left-wing-open{
     transform: translateX(-90%);
-    transition-duration: 1s;
-    transition-delay: 1s;
 }
 .right-wing-open{
     transform: translateX(90%);
-    transition-duration: 1s;
-    transition-delay: 1s;
 }
